--- a/Pear/Controllers/Discovery Flow/Filters/DiscoveryFilterViewController.storyboard
+++ b/Pear/Controllers/Discovery Flow/Filters/DiscoveryFilterViewController.storyboard
@@ -33,63 +33,119 @@
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="y16-WM-9hJ" secondAttribute="height" multiplier="1:1" id="fHl-Vr-ItU"/>
                                         </constraints>
-                                        <state key="normal" image="discovery-icon-tree"/>
+                                        <state key="normal" image="icon-filter-back"/>
                                         <connections>
                                             <action selector="backButtonClicked:" destination="S1D-m6-yiu" eventType="touchUpInside" id="zmw-4D-iCv"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aup-ow-d5C">
-                                        <rect key="frame" x="369" y="10" width="37" height="30"/>
-                                        <state key="normal" title="Done"/>
-                                        <connections>
-                                            <action selector="doneButtonClicked:" destination="S1D-m6-yiu" eventType="touchUpInside" id="06L-a0-yDK"/>
-                                        </connections>
-                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Filter for" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="33e-vp-6CD">
+                                        <rect key="frame" x="175" y="14.666666666666664" width="64" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="3NL-yi-dU4"/>
-                                    <constraint firstItem="Aup-ow-d5C" firstAttribute="centerY" secondItem="7OV-Og-1PI" secondAttribute="centerY" id="85Q-BT-VeX"/>
                                     <constraint firstItem="y16-WM-9hJ" firstAttribute="centerY" secondItem="7OV-Og-1PI" secondAttribute="centerY" id="BUd-7b-erB"/>
                                     <constraint firstItem="3H7-gQ-iNC" firstAttribute="width" secondItem="7OV-Og-1PI" secondAttribute="width" id="VPt-o9-KNY"/>
                                     <constraint firstItem="3H7-gQ-iNC" firstAttribute="leading" secondItem="7OV-Og-1PI" secondAttribute="leading" id="ZtQ-TV-zIQ"/>
                                     <constraint firstAttribute="bottom" secondItem="3H7-gQ-iNC" secondAttribute="bottom" id="aB9-bo-68J"/>
                                     <constraint firstAttribute="leading" secondItem="y16-WM-9hJ" secondAttribute="leading" constant="-8" id="g5x-b2-xgR"/>
-                                    <constraint firstAttribute="trailing" secondItem="Aup-ow-d5C" secondAttribute="trailing" constant="8" id="jgg-sL-0S0"/>
+                                    <constraint firstItem="33e-vp-6CD" firstAttribute="centerX" secondItem="7OV-Og-1PI" secondAttribute="centerX" id="l92-B4-0jB"/>
                                     <constraint firstAttribute="bottom" secondItem="y16-WM-9hJ" secondAttribute="bottom" constant="5" id="uZP-hP-EVC"/>
+                                    <constraint firstItem="33e-vp-6CD" firstAttribute="centerY" secondItem="7OV-Og-1PI" secondAttribute="centerY" id="zb1-Jg-FN3"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsMultipleSelection="YES" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TpW-Jd-bnH">
                                 <rect key="frame" x="0.0" y="70" width="414" height="666"/>
                                 <color key="backgroundColor" white="0.90000000000000002" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DiscoveryFilterTVC" rowHeight="86" id="GXB-8e-xaF" customClass="DiscoveryFilterTableViewCell" customModule="Pear" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="86"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DiscoveryFilterTVC" rowHeight="354" id="GXB-8e-xaF" customClass="DiscoveryFilterTableViewCell" customModule="Pear" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="354"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GXB-8e-xaF" id="yWQ-Db-j6m">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="86"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="354"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S07-4v-oyd">
-                                                    <rect key="frame" x="66" y="17" width="124" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="filter-checkbox-unchecked" translatesAutoresizingMaskIntoConstraints="NO" id="cYY-in-QSb">
+                                                    <rect key="frame" x="380" y="145.33333333333334" width="18" height="18"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="18" id="7Bd-Jt-fZI"/>
+                                                        <constraint firstAttribute="width" secondItem="cYY-in-QSb" secondAttribute="height" multiplier="1:1" id="lOL-Pz-pRd"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S07-4v-oyd">
+                                                    <rect key="frame" x="327" y="144" width="45" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H7G-hf-saL">
-                                                    <rect key="frame" x="250" y="17" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hKy-UC-BZe">
+                                                    <rect key="frame" x="28" y="13" width="283" height="283"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="hKy-UC-BZe" secondAttribute="height" multiplier="1:1" id="iVw-fe-nsL"/>
+                                                        <constraint firstAttribute="width" constant="48" id="zuh-4A-B5C"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="filter-checkbox-checked" translatesAutoresizingMaskIntoConstraints="NO" id="K08-xF-S59">
+                                                    <rect key="frame" x="377" y="142.33333333333334" width="24" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="24" id="KRW-0E-TXb"/>
+                                                        <constraint firstAttribute="width" secondItem="K08-xF-S59" secondAttribute="height" multiplier="1:1" id="dtb-IQ-j7m"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="hKy-UC-BZe" secondAttribute="bottom" constant="2" id="1c6-yr-i7W"/>
+                                                <constraint firstItem="hKy-UC-BZe" firstAttribute="top" secondItem="yWQ-Db-j6m" secondAttribute="topMargin" constant="2" id="9lC-3n-svU"/>
+                                                <constraint firstItem="S07-4v-oyd" firstAttribute="leading" secondItem="hKy-UC-BZe" secondAttribute="trailing" constant="16" id="H07-WS-JD1"/>
+                                                <constraint firstItem="cYY-in-QSb" firstAttribute="leading" secondItem="S07-4v-oyd" secondAttribute="trailing" constant="8" id="PtN-ob-g0k"/>
+                                                <constraint firstItem="S07-4v-oyd" firstAttribute="centerY" secondItem="yWQ-Db-j6m" secondAttribute="centerY" id="XYO-Fl-UgA"/>
+                                                <constraint firstAttribute="trailing" secondItem="cYY-in-QSb" secondAttribute="trailing" constant="16" id="ZaQ-zw-g1w"/>
+                                                <constraint firstItem="K08-xF-S59" firstAttribute="centerX" secondItem="cYY-in-QSb" secondAttribute="centerX" id="o5K-6X-4Ed"/>
+                                                <constraint firstItem="hKy-UC-BZe" firstAttribute="leading" secondItem="yWQ-Db-j6m" secondAttribute="leadingMargin" constant="8" id="vOe-d9-abu"/>
+                                                <constraint firstItem="cYY-in-QSb" firstAttribute="centerY" secondItem="yWQ-Db-j6m" secondAttribute="centerY" id="xBT-OK-tkP"/>
+                                                <constraint firstItem="K08-xF-S59" firstAttribute="centerY" secondItem="cYY-in-QSb" secondAttribute="centerY" id="xmL-SP-zuf"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="checkbox" destination="H7G-hf-saL" id="yef-VA-VwA"/>
+                                            <outlet property="checkboxBackground" destination="cYY-in-QSb" id="8rr-9O-ktJ"/>
+                                            <outlet property="checkboxChecked" destination="K08-xF-S59" id="nGg-e6-qp8"/>
                                             <outlet property="nameLabel" destination="S07-4v-oyd" id="OE7-Ll-rax"/>
+                                            <outlet property="thumbnailImage" destination="hKy-UC-BZe" id="sKQ-uV-HX5"/>
                                         </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CreateProfileTVC" rowHeight="60" id="KDz-5C-KRv" customClass="DiscoveryFilterTableViewCell" customModule="Pear" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="382" width="414" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KDz-5C-KRv" id="5aT-21-2yz">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create new profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AU5-Iu-Kuq">
+                                                    <rect key="frame" x="91.999999999999986" y="27.666666666666671" width="139.66666666666663" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="filter-icon-plus" translatesAutoresizingMaskIntoConstraints="NO" id="MUG-5h-bHN">
+                                                    <rect key="frame" x="28" y="13" width="48" height="48"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="MUG-5h-bHN" secondAttribute="height" multiplier="1:1" id="1p9-bU-VVy"/>
+                                                        <constraint firstAttribute="width" constant="48" id="ycB-gh-AVu"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="AU5-Iu-Kuq" firstAttribute="centerY" secondItem="5aT-21-2yz" secondAttribute="centerY" id="ART-uT-yEf"/>
+                                                <constraint firstItem="AU5-Iu-Kuq" firstAttribute="leading" secondItem="MUG-5h-bHN" secondAttribute="trailing" constant="16" id="KtB-rv-Hj9"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="MUG-5h-bHN" secondAttribute="bottom" constant="4" id="OvO-H6-BPd"/>
+                                                <constraint firstItem="MUG-5h-bHN" firstAttribute="top" secondItem="5aT-21-2yz" secondAttribute="topMargin" constant="2" id="R14-3v-1cH"/>
+                                                <constraint firstItem="MUG-5h-bHN" firstAttribute="leading" secondItem="5aT-21-2yz" secondAttribute="leadingMargin" constant="8" id="gSA-Xo-9mb"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -116,6 +172,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="discovery-icon-tree" width="63.333332061767578" height="63.333332061767578"/>
+        <image name="filter-checkbox-checked" width="24" height="24"/>
+        <image name="filter-checkbox-unchecked" width="18" height="18"/>
+        <image name="filter-icon-plus" width="48" height="48"/>
+        <image name="icon-filter-back" width="9.3333330154418945" height="14.666666984558105"/>
     </resources>
 </document>
