--- a/Pear/Controllers/Discovery Flow/Simple Discovery/DiscoverySimpleViewController.storyboard
+++ b/Pear/Controllers/Discovery Flow/Simple Discovery/DiscoverySimpleViewController.storyboard
@@ -48,7 +48,7 @@
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="stL-WM-NaG" secondAttribute="height" multiplier="1:1" id="9TZ-zM-GTf"/>
                                         </constraints>
-                                        <state key="normal" image="discovery-icon-tree"/>
+                                        <state key="normal" image="icon-filter"/>
                                         <connections>
                                             <action selector="filtersButtonClicked:" destination="JZe-kz-mxa" eventType="touchUpInside" id="yw6-xV-9WY"/>
                                         </connections>
@@ -80,27 +80,27 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QfY-r4-Y8X">
-                                                    <rect key="frame" x="16" y="15" width="343" height="454"/>
+                                                    <rect key="frame" x="16" y="15" width="382" height="454"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Uz-Lb-xBO">
-                                                    <rect key="frame" x="16" y="15" width="343" height="454"/>
+                                                    <rect key="frame" x="16" y="15" width="382" height="454"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QSV-KQ-nxW">
-                                                            <rect key="frame" x="0.0" y="323" width="343" height="20"/>
+                                                            <rect key="frame" x="0.0" y="362" width="382" height="20"/>
                                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="20" id="TsR-Qe-8Gt"/>
                                                             </constraints>
                                                         </view>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="XnC-nZ-AcO">
-                                                            <rect key="frame" x="0.0" y="0.0" width="343" height="454"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="382" height="454"/>
                                                             <subviews>
                                                                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QmL-H5-4bA">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="343" height="343"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="382" height="382"/>
                                                                     <subviews>
                                                                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pn0-8j-aJJ">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="343" height="343"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="382" height="382"/>
                                                                         </stackView>
                                                                     </subviews>
                                                                     <constraints>
@@ -113,11 +113,11 @@
                                                                         <constraint firstAttribute="trailing" secondItem="Pn0-8j-aJJ" secondAttribute="trailing" id="xiA-Hd-2XM"/>
                                                                     </constraints>
                                                                 </scrollView>
-                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BEB-YS-xqY">
-                                                                    <rect key="frame" x="0.0" y="343" width="343" height="24"/>
+                                                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BEB-YS-xqY">
+                                                                    <rect key="frame" x="0.0" y="382" width="382" height="24"/>
                                                                     <subviews>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name, Age" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TBX-uV-4pf">
-                                                                            <rect key="frame" x="16" y="16" width="315" height="0.0"/>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Name, Age" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TBX-uV-4pf">
+                                                                            <rect key="frame" x="16" y="16" width="354" height="0.0"/>
                                                                             <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="22"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
@@ -131,14 +131,14 @@
                                                                         <constraint firstItem="TBX-uV-4pf" firstAttribute="top" secondItem="BEB-YS-xqY" secondAttribute="top" constant="16" id="xwc-zV-SRT"/>
                                                                     </constraints>
                                                                 </view>
-                                                                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="phU-QS-g7I">
-                                                                    <rect key="frame" x="0.0" y="367" width="343" height="50"/>
+                                                                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="phU-QS-g7I">
+                                                                    <rect key="frame" x="0.0" y="406" width="382" height="28"/>
                                                                     <subviews>
                                                                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4fa-nN-H5Y">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="0.0" height="50"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="0.0" height="28"/>
                                                                             <subviews>
                                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Saq-9I-UdE">
-                                                                                    <rect key="frame" x="0.0" y="0.0" width="0.0" height="50"/>
+                                                                                    <rect key="frame" x="0.0" y="0.0" width="0.0" height="28"/>
                                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                     <constraints>
                                                                                         <constraint firstAttribute="width" id="Fck-qM-LkF"/>
@@ -156,18 +156,18 @@
                                                                         <constraint firstItem="4fa-nN-H5Y" firstAttribute="height" secondItem="phU-QS-g7I" secondAttribute="height" id="uss-yV-z1g"/>
                                                                     </constraints>
                                                                 </scrollView>
-                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gp4-Fi-ni8">
-                                                                    <rect key="frame" x="0.0" y="417" width="343" height="37"/>
+                                                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gp4-Fi-ni8">
+                                                                    <rect key="frame" x="0.0" y="434" width="382" height="20"/>
                                                                     <subviews>
-                                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="discovery-icon-suggested" translatesAutoresizingMaskIntoConstraints="NO" id="YHY-6r-wjr">
+                                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="discovery-icon-suggested" translatesAutoresizingMaskIntoConstraints="NO" id="YHY-6r-wjr">
                                                                             <rect key="frame" x="16" y="-0.33333333333331439" width="18" height="18"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="width" constant="18" id="5ZN-u3-GUf"/>
                                                                                 <constraint firstAttribute="width" secondItem="YHY-6r-wjr" secondAttribute="height" multiplier="1:1" id="G4G-VM-jaZ"/>
                                                                             </constraints>
                                                                         </imageView>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Suggested for" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wNC-Oe-XCP">
-                                                                            <rect key="frame" x="46" y="0.0" width="285" height="17"/>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Suggested for" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wNC-Oe-XCP">
+                                                                            <rect key="frame" x="46" y="0.0" width="324" height="17"/>
                                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
@@ -186,13 +186,13 @@
                                                             </subviews>
                                                         </stackView>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Psg-dH-oMI">
-                                                            <rect key="frame" x="0.0" y="0.0" width="171.66666666666666" height="343"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="191" height="382"/>
                                                             <connections>
                                                                 <action selector="backButtonClicked:" destination="dpC-89-kHb" eventType="touchUpInside" id="b5a-db-T4B"/>
                                                             </connections>
                                                         </button>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rJK-9R-lNQ">
-                                                            <rect key="frame" x="171.66666666666663" y="0.0" width="171.33333333333337" height="343"/>
+                                                            <rect key="frame" x="191" y="0.0" width="191" height="382"/>
                                                             <connections>
                                                                 <action selector="forwardButtonClicked:" destination="dpC-89-kHb" eventType="touchUpInside" id="pKB-Cr-4lm"/>
                                                             </connections>
@@ -272,5 +272,6 @@
     <resources>
         <image name="discovery-icon-suggested" width="166.66667175292969" height="166.66667175292969"/>
         <image name="discovery-icon-tree" width="63.333332061767578" height="63.333332061767578"/>
+        <image name="icon-filter" width="32" height="32"/>
     </resources>
 </document>
